# ticcutils

./: .gitignore  .travis.yml  AUTHORS  Makefile.am  NEWS  README  README.md  TODO  bootstrap.sh  codemeta.json  configure.ac  dox.cfg  ticcutils.pc.in
.github/workflows/: cleanup.yml  codeql-analysis.yml  codeql-analysis.yml.NOT  ticcutils.yml
docs/: Makefile.am  ticc_commandline.1  ticc_configuration.1  ticc_fdstream.1  ticc_logstream.1  ticc_prettyprint.1  ticc_string.1  ticc_unit_test.1  ticcutils.1
include/: Makefile.am
include/ticcutils/: CommandLine.h  Configuration.h  FdStream.h  FileUtils.h  LogBuffer.h  LogStream.h  Makefile.am  PrettyPrint.h  ServerBase.h  SocketBasics.h  StringOps.h  Tar.h  Timer.h  TreeHash.h  Trie.h  UniHash.h  UniTrie.h  Unicode.h  UnitTest.h  Version.h  XMLtools.h  bz2stream.h  bz2stream.hpp  enum_flags.h  globber.h  gzstream.h  zipper.h
m4/: Makefile.am  ac_osx_pkg.m4  ax_boost_base.m4  ax_boost_regex.m4  ax_cxx_compile_stdcxx.m4  ax_pthread.m4
src/: CommandLine.cxx  Configuration.cxx  FdStream.cxx  FileUtils.cxx  LogStream.cxx  Makefile.am  ServerBase.cxx  SocketBasics.cxx  StringOps.cxx  Tar.cxx  Timer.cxx  TreeHash.cxx  UniHash.cxx  Unicode.cxx  XMLtools.cxx  globber.cxx  runtest.cxx  test.cxx  testlogstream.cxx  tst.sh  zipper.cxx
tests/: Makefile.am  quotes.filter  quotes.old.filter  small.txt  test.tar  testconfig.cfg  testls.1.ok
tests/sub1/: Makefile.am  sub.txt
