# $Id: Makefile.am 8993 2011-03-21 11:19:11Z sloot $
# $URL: https://ilk.uvt.nl/svn/trunk/sources/Timbl6/docs/Makefile.am $

man1_MANS = ticcutils.1 ticc_prettyprint.1 ticc_logstream.1 ticc_string.1 \
	ticc_unit_test.1 ticc_configuration.1 ticc_commandline.1 \
	ticc_fdstream.1

EXTRA_DIST = ticcutils.1 ticc_prettyprint.1 ticc_logstream.1 ticc_string.1 \
	ticc_unit_test.1 ticc_configuration.1 ticc_commandline.1 \
	ticc_fdstream.1
